umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_openbabel_razinger_fig7_62.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 22
bond_count: 25
sum_formula: C17NO4
graph6: UhEGOCDO??_@?@G?_?G?G??C?AG?C???C??@??@?
