umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_openbabel_regressiontest_numrotors.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 58
bond_count: 60
sum_formula: C23H28BrN2O3S+1
graph6: yAO??KC????C?O?Gg???H?C?_C??OA?????__?@G??O??@????O???A????_???BG????A????C?????_????O????A?????O????_??????_?????O?????A??????C??????_?????A??????A??????A???????_??????A???????G???????O???????_???????_???????G???????@????????C????????G????????O????????O????AW????????????????G
