umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_ovjtools_Edta.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 33
bond_count: 37
sum_formula: C10H12CoN2O8-1
graph6: "`qL?H?@G??g??@?_?C??O??aA?C@?C?OA?A?C???_??@???A???@????_???A????O????O????_????G????C???"
