umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_rdkit_145323811.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 172
bond_count: 176
sum_formula: C100F9GaN30O31S
graph6: ~?AkhCOGC@?_?_A?@??_?G?@??C??G??G??C??@???G???_??P??@???G?_?O?????@????G????G????G????C????A?????G?????_????@?????@??????_?????G?????@??????G?????O???????G??????G??????@???????G???????_??????@???????@????????_???????G???????A???????G?????????G????????O????????C????????@?????????G?????????_????????@?????????@??????????_?????????O????????A???????????C??????????O??????????G??????????C??????????@???????????O???????????_??????????@???????????@???????????@????????????G???????????@????????????C????????????O????????????G????????????C????????????@?????????????O?????????????_????????????@?????????????@?????????????@??????????????G?????????????@??????????????C??????????????G??????????????G??????????????C??????????????@???????????????G??????????????@???????????????@???????????????@????????????????_???????????????G???????????????@????????????????C????????????????G????????????????G????????????????C????????????????@?????????????????G???????????????G?_????????????????C?????????????????@??????????????????_?????????????????O?????????????????@??????????????????C??????????????????G??????????????????G???????????????@??G??????????????????O???????????????????G???????????????????_????????????????_?A??????????????G?????????????????????????_???????????????????O???????????O????????????????????????????C????????????????????G????????????????????G????????????????????C????????????????????A?????????????????????G?????????????????????_????????????????????@?????????????????????@??????????????????????_?????????????????????G?????????????????????@?????????????????????@C?????????????????????O???????????????????????G??????????????????????G??????????????????????@???????????????????????G???????????????????????_??????????????????????@???????????????????????@????????????????????????_???????????????????????G???????????????????????A???????????????????????AD???????????????????????_?????????????????????????G?????????????????????????????????????????????????@?????????????????????????O????????????????????????A?????????????????????????A?????????????????????????C?????????????????????????C????????????????????????????????????????????????????@??????????????????????????G??????????????????????????_??????????????????????????O??????????????????????????O??????????????????????????G???????????????????????????????????????????????????????_??????????????????????????A???????????????????????????C???????????????????????????@????????????????????????????_???????????????????????????G
