umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_rdkit_1oir_trans.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 31
bond_count: 34
sum_formula: C23N6O2
graph6: ^hCGGC@?G?_@?P?A??G?@??C??O??G??C??A@??????a??@O???????c???G???@????C????G???AG
