umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_rdkit_7UPJ_mimic3D_1.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 34
bond_count: 38
sum_formula: C27NO5S
graph6: aiCKGC??G?_@?@?GoC??@??C??WO????C??@???G???__?@??_?????_???G???A????O????G????G????C????@????AG
